<resources>
    <string name="app_name">Bop\' em</string>
    <string name="app_description">Este proyecto es una adaptación a moviles del juego de reacciones
        bop it, hecho para desarrollar habilidades en la programación
        en dispositivos android. Para jugar debe seguir la instrucción que de la
        aplicación dentro del tiempo límite.</string>
    <string name="app_author">Miguelangel Peña</string>
    <string name="dev_info">Desarrollado por Miguelangel Peña, Wonderful Studios</string>

    <string name="button_about">About</string>
    <string name="button_settings">Settings</string>
    <string name="button_next">Next</string>
    <string name="button_victory">Victoria</string>
    <string name="button_lose">Derrota</string>

    <!--Preferences -->
    <string name="category_playerData">Datos del jugador</string>
    <string name="playerData_playerID">Identificación del jugador</string>
    <string name="playerData_playerIDdescription">Ingrese su nombre</string>
    <string name="playerData_highScore">Puntaje más alto</string>

    <string name="category_gameCustomize">Personalización del juego</string>
    <string name="gameCustomize_theme">Color del juego</string>
    <string name="gameCustomize_volume">Volumen</string>
    <string name="gameCustomize_intructions">Instrucciones disponibles</string>
    <string name="gameCustomize_UISize">Tamaño de botones y texto</string>

    <string name="category_general">Administración general</string>
    <string name="general_restore">Restablecer los valores predeterminados</string>
</resources>